[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art Src/GUIArt/ButtonUI/pngfind.com-black-rectangle-png-471928.png" type="Texture" id=1]
[ext_resource path="res://Fonts/PolandCannedIntoFuture-OxE3.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GameScripts/UIScripts/Death/DeathScreen.gd" type="Script" id=4]
[ext_resource path="res://Art Src/GUIArt/output-onlinepngtools.png" type="Texture" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 100
outline_color = Color( 0.337255, 0.176471, 0.176471, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[node name="DeathScreen" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="DeathOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
color = Color( 0, 0, 0, 0.192157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DeathOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -410.0
margin_top = -131.0
margin_right = 428.0
margin_bottom = 96.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeathOverlay/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = -55.0
margin_right = 191.0
margin_bottom = 55.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.890196, 0.0509804, 0.0509804, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.603922, 0.462745, 0.462745, 1 )
custom_fonts/font = SubResource( 2 )
text = "You Died"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="DeathOverlay"]
margin_left = 388.0
margin_top = 393.0
margin_right = 1213.0
margin_bottom = 836.0
rect_scale = Vector2( 0.56561, 0.89803 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTxtBtn" type="TextureButton" parent="DeathOverlay/Menu"]
margin_right = 825.0
margin_bottom = 86.0
texture_normal = ExtResource( 6 )

[node name="ReTxtBtn" type="TextureButton" parent="DeathOverlay/Menu"]
margin_top = 90.0
margin_right = 825.0
margin_bottom = 176.0
texture_normal = ExtResource( 6 )

[node name="MainLbl" type="Label" parent="DeathOverlay"]
margin_left = 456.0
margin_top = 417.0
margin_right = 656.0
margin_bottom = 457.0
custom_fonts/font = SubResource( 5 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReLbl" type="Label" parent="DeathOverlay"]
margin_left = 466.0
margin_top = 496.0
margin_right = 703.0
margin_bottom = 536.0
custom_fonts/font = SubResource( 5 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="DeathOverlay/Menu/MainTxtBtn" to="." method="_on_MainTxtBtn_button_up"]
[connection signal="button_up" from="DeathOverlay/Menu/ReTxtBtn" to="." method="_on_ReTxtBtn_button_up"]
